--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Regenergy
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Regenergy es una consultoría centrada en la identificación de la esencia de nuestros clientes para realizar su potencial de crear valor con reciprocidad.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/Regenergy/Novedades/blob/master/LogoGitHub.JPG
 
 #
 # Flags below are optional
