--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Regenergy
 
 # Short bio or description (displayed in the header)
-description: Regenergy es una consultoría centrada en la identificación de la esencia de nuestros clientes para realizar su potencial de crear valor con reciprocidad.
+description: We serve the identification and development of your potential to generate value through data science applied to your needs. Energy, Regenerative Development, Sustainability, Economy, Global Valua Chains, Social Development, Evaluation, Artificial Intelligence Applications, China, and more.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/Regenergy/Novedades/blob/master/LogoGitHub.JPG
@@ -18,20 +18,13 @@ avatar: https://github.com/Regenergy/Novedades/blob/master/LogoGitHub.JPG
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
+  email: info@regenergydata.com
+  facebook: https://www.facebook.com/Regenergyd
+  github: https://github.com/Regenergy/News
+  linkedin: https://www.linkedin.com/in/regenergy/
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
-
-
+  twitter: https://twitter.com/Regenergy3
+  
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus:
@@ -41,13 +34,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://www.regenergydata.com/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "https://github.com/Regenergy/News"
 
 #
 # !! You don't need to change any of the configuration flags below !!
